# mc-mini

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  astyle.config  exampleParameters
docs/: Doxyfile.in
include/: logger.h  params.h
include/geometry/: dataWindow.h  geometry.h
include/matrixForms/: sparseForms.h
include/output/: output.h
include/params/: param_node.h  param_parser.h
include/parser/: parserException.h
include/problem/: problem.h
output/exampleOutput/: exampleOutput-0.h5  exampleOutput-1.h5  exampleOutput-10.h5  exampleOutput-100.h5  exampleOutput-101.h5  exampleOutput-102.h5  exampleOutput-103.h5  exampleOutput-104.h5  exampleOutput-105.h5  exampleOutput-106.h5  exampleOutput-107.h5  exampleOutput-108.h5  exampleOutput-109.h5  exampleOutput-11.h5  exampleOutput-110.h5  exampleOutput-111.h5  exampleOutput-112.h5  exampleOutput-113.h5  exampleOutput-114.h5  exampleOutput-115.h5  exampleOutput-116.h5  exampleOutput-117.h5  exampleOutput-118.h5  exampleOutput-119.h5  exampleOutput-12.h5  exampleOutput-120.h5  exampleOutput-121.h5  exampleOutput-122.h5  exampleOutput-123.h5  exampleOutput-124.h5  exampleOutput-13.h5  exampleOutput-14.h5  exampleOutput-15.h5  exampleOutput-16.h5  exampleOutput-17.h5  exampleOutput-18.h5  exampleOutput-19.h5  exampleOutput-2.h5  exampleOutput-20.h5  exampleOutput-21.h5  (+305 more)
output/tauBenchmark/: tauBenchmark01-1.h5  tauBenchmark01-series.xdmf  tauBenchmark01.xdmf  tauBenchmark02-series.xdmf  tauBenchmark02.h5  tauBenchmark02.xdmf  tauBenchmark03.xdmf  tauBenchmark04-0.h5  tauBenchmark04-series.xdmf  tauBenchmark04.xdmf  tauBenchmark05-0.h5  tauBenchmark05-1.h5  tauBenchmark05-series.xdmf  tauBenchmark05.h5  tauBenchmark05.xdmf  tauBenchmark06-0.h5  tauBenchmark06-series.xdmf  tauBenchmark06.h5  tauBenchmark06.xdmf  tauBenchmark07-series.xdmf  tauBenchmark07.xdmf  tauBenchmark_03-1.h5  tauBenchmark_03-series.xdmf
paramFiles/tauBenchmark/: tauBenchmark01  tauBenchmark02  tauBenchmark03  tauBenchmark04  tauBenchmark05  tauBenchmark06  tauBenchmark07  tauBenchmark1  tauBenchmark2  tauBenchmark3  tauBenchmark4  tauBenchmark5  tauBenchmark6  tauBenchmark7
paramFiles/tauBenchmark/00Original/: tauBenchmark1
source/: CMakeLists.txt  logger.cpp  main.cpp  params.cpp
source/geometry/: geometry.cpp
source/matrixForms/: denseForms.cpp  sparseForms.cpp
source/output/: output.cpp
source/params/: param_node.cpp  param_parser.cpp
source/parser/: parser.cpp
source/problem/: advection.cpp  diffusion.cpp  initialization.cpp  problem.cpp  solveRoutines.cpp
test/: CMakeLists.txt  dense_forms_test.cpp
